--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,16 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.12.0</version>
 		</dependency>
+		<dependency>
+    		<groupId>org.slf4j</groupId>
+    		<artifactId>slf4j-api</artifactId>
+    		<version>2.0.7</version>
+		</dependency>
+		<dependency>
+        	<groupId>ch.qos.logback</groupId>
+        	<artifactId>logback-classic</artifactId>
+        	<version>1.4.8</version>
+    	</dependency>
 	</dependencies>
 	<build>
 		<pluginManagement>
